# dashboard

./: .gitignore  .rustfmt.toml  Cargo.toml  README.json  README.md  README_test.md  draft_cron.yml  gh_repo_list.json  parsed.json  readme_style.md  test_readme.md
.github/workflows/: fetch_repo_list.yml  gh_docs.yml  rustdoc.yml  update_gh_repo.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  repos.rs
crates/dashboard/: Cargo.toml  README.json  README.md
crates/dashboard/benches/: bench_par_seq.rs  benchmark.rs
crates/dashboard/src/: lib.rs  main.rs  markdown.rs  util.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  lib.rs  macros.rs
dashboard/: Cargo.toml
dashboard/src/: main.rs  markdown.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/api/: all.html  index.html  macro.unwrap_struct_iter!.html  macro.unwrap_struct_iter.html  sidebar-items.js
docs/api/repos/: fn.get_list.html  fn.list_user_repos.html  fn.to_hashmap.html  fn.try_repos.html  index.html  sidebar-items.js  struct.List.html
docs/dashboard/: all.html  constant.DESC_WC.html  constant.JSON_GH_REPO_LIST.html  constant.PKG_NAME.html  constant.SAMPLE.html  enum.AppError.html  fn.main.html  fn.try_main.html  fn.try_main_refactor.html  index.html  macro.comment_block!.html  macro.comment_block.html  sidebar-items.js  struct.App.html  type.Result.html
docs/dashboard/app/: constant.ARGS_GH_REPO_LIST_JSON.html  constant.DESC_WC.html  constant.FIELDS.html  constant.JSON_GH_REPO_LIST.html  constant.PATH_JSON_GH_REPO_LIST.html  constant.PATH_MD_OUTPUT.html  constant.PKG_NAME.html  enum.AppError.html  enum.__Field.html  fn.fmt_markdown_list_item.html  fn.try_main_refactor.html  fn.try_main_refactor_v2.html  fn.try_main_refactor_v3.html  index.html  sidebar-items.js  struct.App.html  struct.__FieldVisitor.html  struct.__Visitor.html  type.Result.html
docs/dashboard/config/: constant.FIELDS.html  enum.__Field.html  index.html  sidebar-items.js  struct.Config.html  struct.__FieldVisitor.html  struct.__Visitor.html
docs/dashboard/db/: constant.FIELDS.html  enum.__Field.html  (+5 more)
docs/parser/: all.html  enum.ErrorColor.html  enum.ParserError.html  enum.PrinterError.html  index.html  macro.comment_block.html  macro.comment_block_dyn!.html  macro.comment_block_dyn.html  sidebar-items.js  type.Error.html  type.Result.html
docs/xtask/: all.html  constant.PKG_NAME.html  fn.create_index_html_docs.html  fn.dir_docs.html  fn.dist_binary.html  fn.dist_dir.html  fn.dist_doc_xtask.html  fn.dist_manpage.html  fn.main.html  fn.print_help.html  fn.project_root.html  fn.run.html  fn.run_dist.html  fn.run_dist_doc.html  fn.run_parse_json.html  index.html  sidebar-items.js  type.DynError.html  type.Result.html
parser/: Cargo.toml
parser/src/: lib.rs
scripts/: cluster.py  parse.py
xtask/src/: main.rs
(+64 files in other folders)
