[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
crossbeam = "0.8.2"
lazy_static = "1.4.0"
log = "0.4.17"
parser = { path = "../parser" }
pretty_env_logger = "0.4.0"
rayon = "1.6.1"
regex = "1.7.1"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
thiserror = "1.0.38"
xflags = "0.3.1"
xshell = "0.2.3"

[dev-dependencies]
comrak = "0.16.0"
quickcheck = "1.0.3"
pretty_assertions = "1.3.0"
