[package]
name = "parser"
version = "0.1.0"
edition = "2021"
# readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
atty = "0.2.14"
lazy_static = "1.4.0"
log = "0.4.17"
# pretty_env_logger = "0.4.0"
regex = "1.7.1"
# serde = { version = "1.0.152", features = ["derive"] }
# serde_json = "1.0.92"
termcolor = "1.2.0"
thiserror = "1.0.38"

[dev-dependencies]
pretty_assertions = "1.3.0"
quickcheck = "1.0.3"
tempfile = "3.3.0"
